# WHY_CPP_template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
CMake/: DownloadWhyCpp.cmake  FindWhyCpp.cmake
src/: main.cpp
